Tweak behavior of drawer covering main. Add new cards on group-card-add.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,9 @@
 body{
   font-family: "RobotoDraft"
 }
+sopro-card{
+  margin-bottom: 8px;
+}
 #titleText {
   float: left;
   vertical-align: middle;
