working on scrolling

--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,10 @@ core-icon-button:focus{
   clear: both;
 }
 
+.content-padding {
+  padding: 20px;
+}
+
 #quiltContainer > * {
   vertical-align: top;
 }
