better group cards

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 body{
-  font-family: "RobotoDraft"
+  font-family: "RobotoDraft";
+  background-color: ;
 }
 sopro-card{
   margin-bottom: 8px;
@@ -17,10 +18,12 @@ core-icon-button:focus{
 
 #viewButtons {
   float: right;
+  margin: 0 18px;
 }
 
-.menu-icon material-icon {
+.menu-icon {
   top: 0;
+  cursor: pointer;
 }
 
 .mainTitle {
@@ -39,14 +42,41 @@ core-icon-button:focus{
   vertical-align: top;
 }
 
-#groupQuickAddBox {
+#quickAddBox {
   border: 1px solid lightgrey;
   display: block;
   position: relative;
-  width: 500px;
+  max-width: 450px;
   margin: auto;
   box-sizing: border-box;
   padding: 8px;
+}
+
+#quickAddAdditional {
+  margin-top: 8px;
+}
+
+#quickAddButton {
+  float: right;
+}
+
+.cardholder {
+  display: inline-block;
+  position: relative;
+}
+
+.overflowMenu {
+  z-index: 100;
+  position: absolute;
+  margin-right: 10px;
+  margin-top: -10px;
+  border: 1px solid grey;
+  right: 0;
+  top: 100%;
+}
+
+.overflowMenu a {
+  cursor: pointer;
 }
 
 #addGroupCardButton {
@@ -80,4 +110,5 @@ core-icon-button:focus{
 
 material-item {
   align-items: flex-start;
+  cursor: pointer;
 }
