--- a/css/angular-material.css
+++ b/css/angular-material.css
@@ -2475,7 +2475,8 @@ material-groupcard {
   box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
   padding: 10px;
   margin: 10px;
-  border-radius: 2px; }
+  border-radius: 2px;
+  background-color: lightgreen; }
   material-groupcard .material-groupcard-image {
     min-width: 100%;
     width: -webkit-calc(100% + 10px*2);
@@ -2494,8 +2495,25 @@ material-groupcard.active {
   min-width: 200px;
   overflow: auto; }
 
-.groupcardHotspot {
-  cursor: pointer; }
+.lightDetails {
+  opacity: 0.4;
+  margin-bottom: 10px; }
+
+.groupCount {
+  float: right;
+  vertical-align: top; }
+
+.clearBoth {
+  clear: both; }
+
+div .groupCardMenuBar {
+  background-color: rgba(0, 0, 0, 0.3);
+  min-height: 28px;
+  margin: -10px;
+  padding: 5px; }
+
+.overflowMenuButton {
+  float: right; }
 
 .face {
   border-radius: 30px;
