added save button to dialog

--- a/partials/editGroupCard.tmpl.html
+++ b/partials/editGroupCard.tmpl.html
@@ -7,7 +7,10 @@
   </div>
   <div class="dialog-actions" layout="horizontal" layout-end="end">
     <material-button ng-click="close()">
-      Okay
+      Close
+    </material-button>
+    <material-button ng-click="save(group)" class="material-button-colored">
+      Save
     </material-button>
   </div>
 </material-dialog>
