--- a/css/docs.css
+++ b/css/docs.css
@@ -169,49 +169,49 @@ table {
   font-family: 'RobotoDraft';
   font-style: normal;
   font-weight: 100;
-  src: local('RobotoDraft Thin'), local('RobotoDraft-Thin'), url(//fonts.gstatic.com/s/robotodraft/v1/hope9NW9iJ5hh8P5PM_EAyeJLMOzE6CCkidNEpZOseY.woff) format('woff'); }
+  src: local('RobotoDraft Thin'), local('RobotoDraft-Thin'), url(https://fonts.gstatic.com/s/robotodraft/v1/hope9NW9iJ5hh8P5PM_EAyeJLMOzE6CCkidNEpZOseY.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: normal;
   font-weight: 300;
-  src: local('RobotoDraft Light'), local('RobotoDraft-Light'), url(//fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwR_xHqYgAV9Bl_ZQbYUxnQU.woff) format('woff'); }
+  src: local('RobotoDraft Light'), local('RobotoDraft-Light'), url(https://fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwR_xHqYgAV9Bl_ZQbYUxnQU.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: normal;
   font-weight: 400;
-  src: local('RobotoDraft'), local('RobotoDraft-Regular'), url(//fonts.gstatic.com/s/robotodraft/v1/0xES5Sl_v6oyT7dAKuoni4bN6UDyHWBl620a-IRfuBk.woff) format('woff'); }
+  src: local('RobotoDraft'), local('RobotoDraft-Regular'), url(https://fonts.gstatic.com/s/robotodraft/v1/0xES5Sl_v6oyT7dAKuoni4bN6UDyHWBl620a-IRfuBk.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: normal;
   font-weight: 500;
-  src: local('RobotoDraft Medium'), local('RobotoDraft-Medium'), url(//fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwSqHEX2q--o2so14pIEl08w.woff) format('woff'); }
+  src: local('RobotoDraft Medium'), local('RobotoDraft-Medium'), url(https://fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwSqHEX2q--o2so14pIEl08w.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: normal;
   font-weight: 700;
-  src: local('RobotoDraft Bold'), local('RobotoDraft-Bold'), url(//fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwTqR_3kx9_hJXbbyU8S6IN0.woff) format('woff'); }
+  src: local('RobotoDraft Bold'), local('RobotoDraft-Bold'), url(https://fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwTqR_3kx9_hJXbbyU8S6IN0.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: normal;
   font-weight: 900;
-  src: local('RobotoDraft Black'), local('RobotoDraft-Black'), url(//fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwUExzZ44ka2Lr5i-x5aWr0E.woff) format('woff'); }
+  src: local('RobotoDraft Black'), local('RobotoDraft-Black'), url(https://fonts.gstatic.com/s/robotodraft/v1/u0_CMoUf3y3-4Ss4ci-VwUExzZ44ka2Lr5i-x5aWr0E.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: italic;
   font-weight: 400;
-  src: local('RobotoDraft Italic'), local('RobotoDraft-Italic'), url(//fonts.gstatic.com/s/robotodraft/v1/er-TIW55l9KWsTS1x9bTftkZXW4sYc4BjuAIFc1SXII.woff) format('woff'); }
+  src: local('RobotoDraft Italic'), local('RobotoDraft-Italic'), url(https://fonts.gstatic.com/s/robotodraft/v1/er-TIW55l9KWsTS1x9bTftkZXW4sYc4BjuAIFc1SXII.woff) format('woff'); }
 
 @font-face {
   font-family: 'RobotoDraft';
   font-style: italic;
   font-weight: 700;
-  src: local('RobotoDraft Bold Italic'), local('RobotoDraft-BoldItalic'), url(//fonts.gstatic.com/s/robotodraft/v1/5SAvdU0uYYlH8OURAykt5wRV2F9RPTaqyJ4QibDfkzM.woff) format('woff'); }
+  src: local('RobotoDraft Bold Italic'), local('RobotoDraft-BoldItalic'), url(https://fonts.gstatic.com/s/robotodraft/v1/5SAvdU0uYYlH8OURAykt5wRV2F9RPTaqyJ4QibDfkzM.woff) format('woff'); }
 
 /*
 @mixin material-theme($name, $t100, $t300, $t500, $t700, $t900) {
@@ -315,7 +315,7 @@ table {
   border-radius: inherit;
   pointer-events: none; }
 
-.material-shadow-bottom-z-1, material-button.material-button-raised {
+.material-shadow-bottom-z-1, material-button.material-button-raised, material-button.material-button-raised {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
 
 .material-shadow-animated.material-shadow {
@@ -2470,6 +2470,253 @@ material-item {
 .material-whiteframe-z5 {
   z-index: 5;
   box-shadow: 0px 27px 24px 0 rgba(0, 0, 0, 0.2); }
+
+material-groupcard {
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+  padding: 10px;
+  margin: 10px;
+  border-radius: 2px;
+  background-color: lightgreen; }
+  material-groupcard .material-groupcard-image {
+    min-width: 100%;
+    width: -webkit-calc(100% + 10px*2);
+    width: calc(100% + 10px*2);
+    margin-left: -10px;
+    margin-top: -10px;
+    border-radius: 2px 2px 0 0; }
+
+material-groupcard {
+  display: inline-block;
+  min-height: 100px;
+  min-width: 200px; }
+
+material-groupcard.active {
+  max-height: 250px;
+  min-width: 200px;
+  overflow: auto; }
+
+.lightDetails {
+  opacity: 0.4;
+  margin-bottom: 10px; }
+
+.groupCount {
+  float: right;
+  vertical-align: top; }
+
+.clearBoth {
+  clear: both; }
+
+div .groupCardMenuBar {
+  background-color: rgba(0, 0, 0, 0.3);
+  min-height: 28px;
+  margin: -10px;
+  padding: 5px; }
+
+.overflowMenuButton {
+  float: right; }
+
+.face {
+  border-radius: 30px;
+  border: 1px solid #ddd;
+  width: 48px;
+  margin: 16px; }
+
+/* Animations */
+.animate-show {
+  line-height: 20px;
+  opacity: 1;
+  padding: 10px;
+  background: white; }
+
+.animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove.ng-hide-remove-active {
+  -webkit-transition: all linear 0.5s;
+  transition: all linear 0.5s; }
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px; }
+
+/**
+ * Position a FAB button.
+ */
+material-button {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: inline-block;
+  position: relative;
+  padding: 4px;
+  outline: none;
+  border: 0;
+  border-radius: 3px;
+  background-color: transparent;
+  background-image: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: inherit;
+  font-style: inherit;
+  font-variant: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
+  cursor: pointer;
+  overflow: hidden; }
+  material-button.material-button-colored {
+    color: #4285f4;
+    fill: #4285f4; }
+  material-button.material-button-cornered {
+    border-radius: 0; }
+  material-button:hover, material-button:focus {
+    background-color: #e4e4e4; }
+  material-button .material-button-inner {
+    position: absolute;
+    opacity: 0;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%; }
+  material-button[disabled] {
+    background-color: #eaeaea !important;
+    color: #a8a8a8 !important;
+    cursor: auto; }
+  material-button.material-button-icon {
+    padding: 0;
+    background: none; }
+  material-button.material-button-raised {
+    background-color: #dfdfe9; }
+    material-button.material-button-raised:hover, material-button.material-button-raised:focus {
+      background-color: #d6d6d6; }
+    material-button.material-button-raised.material-button-colored {
+      background-color: #4285f4;
+      color: #fff; }
+      material-button.material-button-raised.material-button-colored:hover, material-button.material-button-raised.material-button-colored:focus {
+        background-color: #3367d6; }
+  material-button.material-button-fab {
+    z-index: 2;
+    padding: 16px;
+    width: 56px;
+    height: 56px;
+    border-radius: 28px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.258824);
+    border-radius: 50%;
+    overflow: hidden; }
+    material-button.material-button-fab.material-button-fab-bottom-right {
+      top: auto;
+      right: 28px;
+      bottom: -28px;
+      left: auto;
+      position: absolute; }
+    material-button.material-button-fab.material-button-fab-bottom-left {
+      top: auto;
+      right: auto;
+      bottom: -28px;
+      left: 28px;
+      position: absolute; }
+    material-button.material-button-fab.material-button-fab-top-right {
+      top: -28px;
+      right: 28px;
+      bottom: auto;
+      left: auto;
+      position: absolute; }
+    material-button.material-button-fab.material-button-fab-top-left {
+      top: -28px;
+      right: auto;
+      bottom: auto;
+      left: 28px;
+      position: absolute; }
+
+a.material-button {
+  padding: 2px 6px 3px;
+  line-height: 25px;
+  text-decoration: none; }
+  a.material-button:hover, a.material-button:focus {
+    text-decoration: none; }
+
+.material-button-group {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  width: 100%; }
+
+.material-button-group > .material-button {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: block;
+  overflow: hidden;
+  width: 0;
+  border-width: 1px 0px 1px 1px;
+  border-radius: 0;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+  .material-button-group > .material-button:first-child {
+    border-radius: 2px 0px 0px 2px; }
+  .material-button-group > .material-button:last-child {
+    border-right-width: 1px;
+    border-radius: 0px 2px 2px 0px; }
+
+label {
+  display: block;
+  font-size: 0.85em; }
+
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
+  display: block;
+  border-width: 0 0 1px 0;
+  line-height: 30px;
+  font-size: 0.85em; }
+  textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
+    outline: 0; }
+
+input, textarea {
+  background: none; }
+  input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+    color: #a4a4a4; }
+  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+    color: #a4a4a4; }
+
+material-custom-input-group, .material-custom-input-group {
+  margin: 10px 0 10px 0;
+  position: relative; }
+  material-custom-input-group input, material-custom-input-group textarea, .material-custom-input-group input, .material-custom-input-group textarea {
+    -webkit-transition: all ease-out 300ms;
+    transition: all ease-out 300ms;
+    color: #111111; }
+  material-custom-input-group.material-input-group-inverted input, .material-custom-input-group.material-input-group-inverted input {
+    color: #f1f1f1; }
+  material-custom-input-group label, .material-custom-input-group label {
+    -webkit-font-smoothing: antialiased;
+    z-index: 1;
+    -webkit-transform: translate3d(0, 30px, 0);
+    transform: translate3d(0, 30px, 0);
+    -webkit-transform-origin: left center;
+    transform-origin: left center;
+    -webkit-transition: all ease-out 300ms;
+    transition: all ease-out 300ms;
+    color: #a4a4a4; }
+    material-custom-input-group label:hover, .material-custom-input-group label:hover {
+      cursor: text; }
+  material-custom-input-group.material-input-focused input, material-custom-input-group.material-input-has-value input, .material-custom-input-group.material-input-focused input, .material-custom-input-group.material-input-has-value input {
+    border-bottom-width: 2px; }
+  material-custom-input-group.material-input-focused label, material-custom-input-group.material-input-has-value label, .material-custom-input-group.material-input-focused label, .material-custom-input-group.material-input-has-value label {
+    -webkit-transform: translate3d(0, 0, 0) scale(0.85);
+    transform: translate3d(0, 0, 0) scale(0.85); }
 
 /*
 
