--- a/css/custom.css
+++ b/css/custom.css
@@ -1,13 +1,45 @@
 body{
   font-family: "RobotoDraft";
+  overflow: hidden;
 }
 
-/* material-card syles */
+/* 
+TODO: Make left nav togglable on md+ screens. The following was removed from a local copy 
+of angular-material.css but it will return when compiled until we fork sidenav. See:
+https://github.com/angular/material/blob/master/src/components/sidenav/_sidenav.scss#L44
+*/
+
+div .cardMenuBar {
+ background-color: rgba(0, 0, 0, 0.3);
+ min-height: 28px;
+ margin: 0 -5px 0 -5px;
+/*
+ padding: 5px;
+ margin: -10px;
+*/
+}
+.overflowMenuButton {
+ float: right;
+}
+.overflowMenu {
+ z-index: 100;
+ position: absolute;
+ margin-right: 10px;
+ margin-top: -10px;
+ border: 1px solid grey;
+ right: 0;
+ top: 100%;
+}
+.overflowMenu a {
+ cursor: pointer;
+} 
+
 material-card{
   background-color: lightgreen;
   display: inline-block;
   min-height: 100px;
   min-width: 200px;
+  padding: 5px 5px 0px 5px;
 }
 
 .lightDetails {
@@ -31,6 +63,7 @@ core-icon-button:focus{
 }
 
 #viewButtons {
+  height: 48px;
   float: right;
   margin: 0 18px;
 }
@@ -53,7 +86,7 @@ core-icon-button:focus{
 }
 
 .groupListsContainer {
-  height: 100vh;
+  /* height: 100vh; */
 }
 #quiltContainer > * {
   vertical-align: top;
@@ -77,6 +110,9 @@ core-icon-button:focus{
   float: right;
 }
 
+#myGroupsContainer{
+  padding-bottom: 60px;
+}
 .cardholder {
   display: inline-block;
   position: relative;
@@ -129,3 +165,92 @@ material-item {
   align-items: flex-start;
   cursor: pointer;
 }
+
+/* 
+ * 
+ * EVERYTHIGN BELOW HERE IS COPIED FROM ANGULAR/MATERIAL DOCS.CSS
+ * 
+ */
+
+/*
+
+[layout-fill] {
+  margin: 0;
+  height: 100%;
+  width: 100%; }
+
+ material-content, .material-content {
+  display: block;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch; }
+  material-content[scroll-y], .material-content[scroll-y] {
+    overflow-y: auto;
+    overflow-x: hidden; }
+  material-content[scroll-x], .material-content[scroll-x] {
+    overflow-x: auto;
+    overflow-y: hidden; }
+  material-content.material-content-padding, .material-content.material-content-padding {
+    padding: 20px; }
+
+material-toolbar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+  font-size: 1.3em;
+  min-height: 64px;
+  width: 100%; }
+  material-toolbar.material-tall {
+    height: 192px; }
+  material-toolbar.material-medium-tall {
+    height: 88px; }
+    material-toolbar.material-medium-tall .material-toolbar-tools {
+      height: 48px; }
+  material-toolbar .material-indent {
+    margin-left: 64px; }
+
+.material-toolbar-tools {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  width: 100%;
+  height: 64px;
+  font-size: inherit;
+  font-weight: normal;
+  padding: 0 10px;
+  margin: 0; }
+  .material-toolbar-tools > * {
+    font-size: inherit;
+    margin: 0 8px; }
+  .material-toolbar-tools h2, .material-toolbar-tools h3 {
+    font-weight: normal; }
+  .material-toolbar-tools a {
+    color: inherit;
+    text-decoration: none; }
+  .material-toolbar-tools material-button {
+    font-size: 16px; }
+*/
