--- a/css/custom.css
+++ b/css/custom.css
@@ -108,14 +108,39 @@ core-icon-button:focus{
   border: 1px solid lightgrey;
   display: block;
   position: relative;
-  max-width: 450px;
+  max-width: 500px;
   margin: auto;
   box-sizing: border-box;
   padding: 8px;
+  line-height: 24px;
+}
+
+#quickAddTitle {
+  display: inline-block;
+  border-bottom: none;
+  font-size: 14px;
 }
 
 #quickAddAdditional {
   margin-top: 8px;
+}
+
+#quickAddBox .bold {
+  font-weight: bold;
+  font-size: 17px;
+}
+#quickAddDescription {
+  display: inline-block;
+  border-bottom: none;
+  font-size: 14px;
+}
+#quickAddBox input {
+  border-bottom: none;
+}
+#quickAddBox textarea {
+  border-bottom: none;
+  width: 100%;
+  line-height: 1.2em;
 }
 
 #quickAddButton {
@@ -163,6 +188,73 @@ material-item {
   align-items: flex-start;
   cursor: pointer;
 }
+
+/* COPIED FROM JIMMY'S CODE FOR POLLMASTER DROPDOWN AND EDITED
+ * This should eventually be a component
+ */
+
+.custom-dropdown {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.custom-dropdown select {
+  background-color: transparent;
+  color: #444;
+  font-size: inherit;
+  padding-right: 2.5em; 
+  border: none;
+  margin: 0;
+  border-radius: 3px;
+  text-indent: 0.01px;
+  text-overflow: '';
+  -webkit-appearance: button;
+  border-bottom: 2px solid #B1AFAF;  
+}
+.custom-dropdown select{
+  text-transform: capitalize;
+  width: 100%;
+}
+.custom-dropdown::before,
+.custom-dropdown::after {
+  content: "";
+  position: absolute;
+  pointer-events: none;
+  padding-bottom: none;
+}
+
+.custom-dropdown::after {
+  content: "\25BC";
+  height: 1em;
+  font-size: .625em;
+  line-height: 1;
+  right: 1.2em;
+  top: 50%;
+  margin-top: -.5em;
+}
+
+.custom-dropdown::before {
+  width: 2em;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 0 3px 3px 0;
+  border-bottom: 2px solid #B1AFAF;
+}
+
+.custom-dropdown::before {
+  background-color: transparent;
+}
+
+.custom-dropdown::after {
+  color: rgba(0,0,0,.4);
+}
+
+.small {
+  font-size: 1em;
+}
+
 
 /* 
  * 
