--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,17 @@
+/* 
+
+Primary Color:
+#3f51b5
+rgba(63,81,181, 0.3);
+
+Accent Color:
+#ff5722
+rgba(255,87,34, 0.3);
+
+*/
+
+
+
 body{
   overflow: hidden;
 }
