--- a/css/custom.css
+++ b/css/custom.css
@@ -428,3 +428,91 @@ material-toolbar {
   margin-bottom: 0px;
   padding: 10px;
 }
+.material-dialog-container material-dialog {
+  width:  50%;
+}
+material-ink-bar {
+  background: black;
+}
+material-checkbox {
+  margin:0px;
+}
+.tab1 {
+  padding:15px;
+}
+material-checkbox:focus .material-label {
+  border-color:transparent;
+}
+.checkLabel {
+  margin: 0px 5px;
+  margin-top: 5px;
+}
+.options p{
+  margin:0px;
+  font-size: 13px;
+}
+::-webkit-scrollbar {  
+    width: 12px; 
+}  
+::-webkit-scrollbar-track {  
+    background-color: rgba(234,234,234,0.2);
+}  
+::-webkit-scrollbar-thumb {  
+    background-color: #ccc;  
+}  
+::-webkit-scrollbar-thumb:hover {  
+    background-color: #aaa;  
+}
+.inputInside input {
+  border: 1px solid slategray;
+  width: 35px;
+  text-align: center;
+}
+.alliance {
+  background-color: #5B391E !important;
+  color: white;
+}
+material-checkbox .material-icon {
+  margin-top: 3px;
+}
+material-checkbox {
+  margin: 1px;
+}
+.newRuleWrapper {
+margin: 16px 0;
+}
+#addRuleInput {
+  background-image: url(../material-icons/icons/system_icons/content/res/1x_web/ic_add_18dp.png);
+  background-repeat: no-repeat;
+  text-indent: 20px;
+}
+#addRuleInput {
+  line-height: 15px;
+  margin: 5px 0;
+}
+.rulesLine.focused {
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+}
+.newRuleWrapper.focused {
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+}
+.ruleInput {
+  height: 28px;
+  width: 35px;
+  text-align: center;
+  border: 1px solid gray !important;
+  margin: 0px 5px;
+  display: inline-block;
+}
+.rulesLine p {
+  margin: 0px;
+  display: inline-block;
+  border-width: 0px 0px 1px 0px;
+  line-height: 30px;
+  font-size: 0.85em;
+  vertical-align: baseline;
+  color: black;
+  border-bottom: 1px solid rgb(233, 233, 233);  
+}
